[tool.poetry]
name = "clue"
version = "0.43.05"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "1.68.0"
blokus-python = {git = "ssh://git@github.com/headlamp-health/blokus-python.git", rev = "v1.57.70"}
grpcio-tools = "1.68.0"
alembic = "^1.8.1"
sqlalchemy = "^1.4.42"
aenum = "^3.1.11"
psycopg2 = "^2.9.4"
pydantic = "^1.10.2"
confluent-kafka = "^1.9.2"
requests = "^2.28.2"
loguru = "^0.6.0"
prometheus-client = "^0.19.0"
grpc-interceptor = "^0.15.4"
urllib3 = "1.26.15"
platformdirs = "3.0.0"
faker = "^19.9.0"
mixpanel = "^4.10.0"
cachetools = "^4.2.4"
protobuf = "^5.28.3"

[tool.poetry.group.dev.dependencies]
watchdog = "^2.1.9"
black = "^22.10.0"
isort = "^5.10.1"
autoflake = "^1.7.6"
flake8 = "^5.0.4"
pytest = "^7.1.3"
python-dotenv = "^0.21.0"
pytest-dotenv = "^0.5.2"
pytest-grpc = "^0.8.0"
pytest-depends = "^1.0.1"
coverage = "^7.2.5"
protobuf = "^5.28.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
